src/scss/components/_tabs.scss
.tabs {
	border-color: var(--brand-primary);
	border-style: solid;
	border-bottom-width: 0.2rem;
	margin-top: var(--gutter);
	padding: 0 native-max(calc(50% - (80rem / 2)), 10rem);

	+ .block,
	+ .article-list .block {
		margin-top: 0;
	}

	button {
		background-color: var(--background-color);
		border-radius: 0.5rem 0.5rem 0 0;
		margin-right: 0.2rem;
		padding: calc(var(--gutter) / 2) var(--gutter);
		position: relative;
		transition-duration: 0.1s;
		transition-property: background-color, border-color;

		&:focus,
		&:hover {
			background-color: var(--background-color-alt);
		}

		&.is-active {
			background-color: var(--brand-primary);
			color: var(--white);
		}
	}
}

